php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #31792 getrusage() does not give ru_nswap
Submitted: 2005-02-01 12:37 UTC Modified: 2005-03-01 23:28 UTC
From: bertrand at toggg dot com Assigned:
Status: Closed Package: *General Issues
PHP Version: 4CVS, 5CVS (2005-02-21) OS: *nix
Private report: No CVE-ID: None
 [2005-02-01 12:37 UTC] bertrand at toggg dot com
Description:
------------
Although this resource usage is documented in PHP manual getrusage(),
ru_nwsap (number of swap) is not reported.
checking ext/standard/microtime.c, it's obviously not copied in the returned array.
Does exist a technical reason for that ?
Thanks
bertrand


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-02-13 21:43 UTC] vrana@php.net
It's not ru_nwsap but ru_nswap (typo).
 [2005-02-14 00:19 UTC] bertrand at toggg dot com
Thanks vrana !
You're right, it's ru_nswap resource usage number of swap.
(as stated in title). So, back from bogus.
Do you have some answer about why it's not reported ?
à+
 [2005-02-21 22:34 UTC] sniper@php.net
This indeed is missing.

 [2005-03-01 22:34 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2005-03-01 23:28 UTC] bertrand at toggg dot com
Thank YOU guys DOING PHP better.
Longing to get the change :)
à+
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 14 13:00:01 2026 UTC