Fixed bug #31792 (getrusage() does not provide ru_nswap value).